--- a/client/src/components/Sidebar/sidebar.scss
+++ b/client/src/components/Sidebar/sidebar.scss
@@ -13,7 +13,7 @@
     .logo {
       font-size: 20px;
       font-weight: bold;
-      color: #2548cb;
+      // color: #2548cb;
     }
   }
 
@@ -50,7 +50,7 @@
 
         .icon {
           font-size: 18px;
-          color: #2548cb;
+          color: #2c5b94;
         }
 
         span {
